fixed issue with dates and added background color to columns and today column for better visibility

--- a/ui/src/css/dashboard.css
+++ b/ui/src/css/dashboard.css
@@ -15,6 +15,8 @@
     width: 100%;
     grid-auto-flow: column;
     grid-template-columns: minmax(200px, min-content);
+    /* I've changed the max-height to make scroll snap easier
+    original value: 500. change back later */
     max-height: 300px;
     overflow:auto;
     overflow-y: scroll;
@@ -55,6 +57,30 @@
     left: 0;
 }
 
+.gantt-background {
+    display: grid;
+    grid-template-rows: subgrid;
+    grid-row: 1/var(--gantt-maximum-rows);
+    grid-template-columns: subgrid;
+    grid-column: 2/var(--gantt-maximum-columns);
+}
+
+.gantt-col {
+    grid-row: 1/var(--gantt-maximum-rows);
+}
+
+.gantt-col.weekday {
+    background-color: white;
+}
+
+.gantt-col.weekend {
+    background-color: rgb(238, 238, 238);
+}
+
+.gantt-col.today {
+    /* border: rebeccapurple 1px; */
+    background-color: #ac94b1;
+}
 
 .sidebar-container {
     display: grid;
@@ -109,6 +135,11 @@
     grid-column: 2/var(--gantt-maximum-columns);
     /* overflow-x: scroll; */
 }
+
+/* .gantt-bar > p {
+    position: sticky;
+    left: 0;
+} */
 
 .action-bar {
     display: flex;
